fix:vendor product title not showing issue

--- a/src/ALT/ProductCartd1.css
+++ b/src/ALT/ProductCartd1.css
@@ -516,7 +516,7 @@
 
 @media (max-width: 480px) {
   .product1 {
-    height: 300px;
+    height: 400px;
     padding: 3px 3px 6px;
   }
 
